--- a/mainPage.css
+++ b/mainPage.css
@@ -7,7 +7,7 @@
 }
 #product{
     background-color: #f5f5f5;
-    height: 340vh;
+    min-height: 340vh;
     overflow: hidden;
     position: relative;
     overflow-y: auto; 
@@ -32,8 +32,13 @@
     flex-direction: column; 
     margin-right: 20px;
 }
+@media (max-width: 600px) {
+    #allProductText {
+        margin-right: 0px;
+    }
+}
 .productText {
-    height: 80vh;
+    min-height: 80vh;
     display: flex;
     flex-direction: column; 
     align-items: center;
@@ -50,13 +55,19 @@
     font-weight: 200;
     margin-top: 10px;
 }
-.screenshot {
+#mainScreenshot {
     position: fixed;
     left: 15%; 
     width: 25%; 
     margin: 0;
     padding: 0;
     border: 0;
+}
+.mobileScreenshots{
+    width: 100%;
+    display: none;
+    margin-top: 32px;
+    margin-bottom: 32px;
 }
 .outmostPricingDiv{
     width: 300px;
